@@ -243,4 +243,12 @@ zone "inaczsk.example" {
 	allow-update { any; };
 	auto-dnssec maintain;
 };
+
+zone "inaczsk2.example" {
+	type master;
+	file "inaczsk2.example.db";
+	allow-update { any; };
+	auto-dnssec maintain;
+};
+
 include "trusted.conf";
