@@ -1,7 +1,15 @@
+4838.	[bug]		zone.c:add_sigs was not properly determining
+			if there were active KSK and ZSK keys for
+			a algorithm when update-check-ksk is true
+			(default) leaving records unsigned with one or
+			more DNSKEY algorithms. [RT #46754]
+
 4837.	[bug]		dns_update_signatures{inc} (add_sigs) was not
 			properly determining if there were active KSK and
 			ZSK keys for a algorithm when update-check-ksk is
-			true (default) leaving records unsigned. [RT #46743]
+			true (default) leaving records unsigned when there
+			were multiple DNSKEY algorithms for the zone.
+			[RT #46743]
 
 4836.	[bug]		Zones created using "rndc addzone" could
 			temporarily fail to inherit an "allow-transfer"
